--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webpacktemplate",
+  "name": "qwerty",
   "version": "1.0.0",
   "description": "My template",
   "main": "index.js",
@@ -11,13 +11,9 @@
     "> 1%",
     "last 3 version"
   ],
-  "author": "https://github.com/vedees",
+  "author": "https://github.com/Atr1n",
   "repository": {
-    "type": "git",
-    "url": "git+https://github.com/vedees/webpack-template.git"
-  },
-  "bugs": {
-    "url": "https://github.com/vedees/webpack-template/issues"
+    "type": "git"
   },
   "keywords": [
     "webpack",
@@ -25,11 +21,12 @@
     "merge",
     "bable",
     "bable7",
-    "scss",
-    "vue"
+    "scss"
   ],
   "license": "MIT",
   "dependencies": {
+    "imask": "^6.0.7",
+    "swiper": "^6.7.0",
     "vue": "^2.6.11"
   },
   "devDependencies": {
